Se agregró el background para dispositvos móviles y se hicieron modificaciones en los estilos para ocultar elementos al momento de utilizar responsive design

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <a class="name-app" href="#">¡Deprisa!</a>
             <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Usuario">
+                <input class="form-control me-2" type="text" placeholder="Usuario" id="prueba">
                 <input class="form-control me-4" type="password" placeholder="Contraseña">
                 <button class="btn btn-success me-2 botones-form log-in" type="button">Ingresar</button>
                 <button class="btn btn-success botones-form register" type="button">Registrarse</button>
