--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -7,15 +7,16 @@
     <title>Landing Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="img/faviconLogo.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light nav-estilos">
         <div class="container-fluid">
             <a class="name-app" href="#">¡Deprisa!</a>
             <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Usuario" id="prueba">
-                <input class="form-control me-4" type="password" placeholder="Contraseña">
-                <button class="btn btn-success me-2 botones-form log-in" type="button">Ingresar</button>
+                <input id="cUsuario" class="form-control me-2" type="text" placeholder="Usuario" id="prueba">
+                <input id="cClave" class="form-control me-4" type="password" placeholder="Contraseña">
+                <button id="cEnviar" class="btn btn-success me-2 botones-form log-in" type="button">Ingresar</button>
                 <button class="btn btn-success botones-form register" type="button">Registrarse</button>
             </form>
           </div>
@@ -57,9 +58,9 @@
 
 
     <script src="js/controlador.js"></script>
+    <script src="js/validator.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>   
 </body>
 </html>
