Se terminó de crear la parte de registrarse con su respectivo controlador

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href="img/faviconLogo.ico" type="image/x-icon">
 </head>
-<body>
+<body style="background-color: rgb(10, 148, 95);">
 
     <div class="container-fluid">
         <div class="row nav-estilos">
