--- a/Cliente/paginas/registrarse.html
+++ b/Cliente/paginas/registrarse.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/faviconLogo.ico" type="image/x-icon">
 </head>
@@ -26,40 +26,50 @@
                 <div class="col-12 justify-content-center mt-4">
                     <div class="input-group">
                         <span class="input-group-text text-estilos span-hide">Nombre</span>
-                        <input type="text" class="form-control text-estilos" placeholder="Ingrese su nombre">
+                        <input id="nuevoNombre" type="text" class="form-control text-estilos" placeholder="Ingrese su nombre">
                     </div>
                 </div>
                 <div class="col-12 justify-content-center mt-4">
                     <div class="input-group">
                         <span class="input-group-text text-estilos span-hide">Apellido</span>
-                        <input type="password" class="form-control text-estilos" placeholder="Ingrese su apellido">
+                        <input id="newApellido" type="text" class="form-control text-estilos" placeholder="Ingrese su apellido">
                     </div>
                 </div>
                 <div class="col-12 justify-content-center mt-4">
                     <div class="input-group">
                         <span class="input-group-text text-estilos span-hide">Email</span>
-                        <input type="password" class="form-control text-estilos" placeholder="Ingrese su email">
+                        <input id="nuevoEmail" type="text" class="form-control text-estilos" placeholder="Ingrese su email">
                     </div>
                 </div>
                 <div class="col-12 justify-content-center mt-4">
                     <div class="input-group">
                         <span class="input-group-text text-estilos span-hide">Usuario</span>
-                        <input type="password" class="form-control text-estilos" placeholder="Cree su usuario">
+                        <input id="nuevoUser" type="text" class="form-control text-estilos" placeholder="Cree su usuario">
                     </div>
                 </div>
                 <div class="col-12 justify-content-center mt-4">
                     <div class="input-group">
                         <span class="input-group-text text-estilos span-hide">Contraseña</span>
-                        <input type="password" class="form-control text-estilos" placeholder="Cree su contraseña">
+                        <input id="nuevaPass" type="password" class="form-control text-estilos" placeholder="Cree su contraseña">
                     </div>
                 </div>
                 <div class="col-12 justify-content-center mt-4 d-grid gap-2">
-                    <button style="background-color: rgb(10, 148, 95); color: rgb(255, 255, 255);" class="btn btn-block text-estilos" type="button">Registrarse</button>
+                    <button id="enviar-datos-cliente" style="background-color: rgb(10, 148, 95); color: rgb(255, 255, 255);" class="btn btn-block text-estilos" type="button">Registrarse</button>
                 </div>
             </div> 
         </div>
 
+        <div class="row justify-content-center">
+            <button type="button" class="btn btn-lg mt-5" style="background-color: rgb(224, 63, 29);">
+                <a href="../index.html" style="color: white;">
+                    Regresar
+                </a>
+            </button>
+        </div>
+
     </main>
+
+    <script src="../js/registro-controlador.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
