--- a/Cliente/paginas/inicio.html
+++ b/Cliente/paginas/inicio.html
@@ -7,10 +7,87 @@
     <title>INICIO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos-opciones.css">
     <link rel="shortcut icon" href="../img/faviconLogo.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>INICIO</h1>
+
+    <nav class="navbar nav-estilos">
+        <div class="container-fluid justify-content-center">
+            <a class="navbar-brand mr-0 name-app" href="#">Deprisa</a>
+        </div>
+    </nav>
+
+    
+    <div class="container contenedor-estilos mt-2">
+        <div class="">
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner carousel-estilos">
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <img src="../img/img_slider/imagen1.jpg" class="d-block w-100 h-25" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="../img/img_slider/imagen2.jpg" class="d-block w-100 h-25" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="../img/img_slider/imagen3.jpg" class="d-block w-100 h-25" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <img src="../img/img_slider/imagen4.jpg" class="d-block w-100 h-25" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+
+    <div class="container">
+        <div class="row mt-4" style="margin: 0 auto;">
+            <div class="col-md-6 col-sm-12 mb-3">
+                <h2 class="text-center estilo-texto">Desayunos</h2>
+                <div class="fondo-estilo">
+                    <button class="btn estilo-tamanio add-fondo1">
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 mb-3">
+                <h2 class="text-center estilo-texto">Almuerzos</h2>
+                <div class="fondo-estilo">
+                    <button class="btn estilo-tamanio add-fondo2">
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 mb-3">
+                <h2 class="text-center estilo-texto">Cenas</h2>
+                <div class="fondo-estilo">
+                    <button class="btn estilo-tamanio add-fondo3">
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 mb-3">
+                <h2 class="text-center estilo-texto">Bebidas</h2>
+                <div class="fondo-estilo">
+                    <button class="btn estilo-tamanio add-fondo4">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <button class="btn agregar-imagen1">
+                    </button>
+                </div>
+                <div class="col">
+                    <button class="btn agregar-imagen2">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
